<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.tulio.tcc.CadastroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

        <GridLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="35dp"
            android:background="@drawable/container_layout"
            android:orientation="vertical"
            android:paddingBottom="7dp"
            android:id="@+id/gridLayout">

            <TextView
                android:id="@+id/textView_Bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Bairro: "
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10" />

            <TextView
                android:id="@+id/textView_Rua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Rua:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Rua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10" />

            <TextView
                android:id="@+id/textView_Numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Numero"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView_Complemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Complemento:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Complemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10" />

            <TextView
                android:id="@+id/textView_Cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="CEP(Só números): "
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editText_Cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView_Nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/texto_nome"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_Cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="CPF(Só números): "
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editText_Cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView_Telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Telefone(Só números):"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Email:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView_Usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/texto_usuario"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_Senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/texto_senha"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView_ConfirmacaoSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/texto_confirmacao_senha"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_ConfirmacaoSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_Cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/texto_cadastrar"
                android:textColor="#CCFFFFFF"
                android:textStyle="bold"
                android:onClick="cadastrar"/>

        </GridLayout>

    </RelativeLayout>

</ScrollView>

